--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vplugin-pagination",
+  "name": "pagination-vplugin",
   "description": "分页控件",
-  "version": "1.0.16",
+  "version": "1.0.1",
   "author": "kangyuin<742588827@qq.com>",
   "license": "MIT",
   "private": false,
